lab4_custom/lab4_custom.sdk/.metadata/.plugins/org.eclipse.cdt.ui/Matrix_multiplication_lab4.build.log
12:30:57 **** Auto Build of configuration Debug for project Matrix_multiplication_lab4 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/matrix_mult.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/matrix_mult.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Matrix_multiplication_lab4_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/matrix_mult.d" -MT"src/matrix_mult.o" -o "src/matrix_mult.o" "../src/matrix_mult.c"
../src/matrix_mult.c: In function 'main':
../src/matrix_mult.c:120:5: error: 'a' undeclared (first use in this function)
     a = a+b+c+d+e+g+h+a;
     ^
../src/matrix_mult.c:120:5: note: each undeclared identifier is reported only once for each function it appears in
../src/matrix_mult.c:120:11: error: 'b' undeclared (first use in this function)
src/subdir.mk:21: recipe for target 'src/matrix_mult.o' failed
     a = a+b+c+d+e+g+h+a;
           ^
../src/matrix_mult.c:120:13: error: 'c' undeclared (first use in this function)
     a = a+b+c+d+e+g+h+a;
             ^
../src/matrix_mult.c:120:15: error: 'd' undeclared (first use in this function)
     a = a+b+c+d+e+g+h+a;
               ^
../src/matrix_mult.c:120:17: error: 'e' undeclared (first use in this function)
     a = a+b+c+d+e+g+h+a;
                 ^
../src/matrix_mult.c:120:19: error: 'g' undeclared (first use in this function)
     a = a+b+c+d+e+g+h+a;
                   ^
../src/matrix_mult.c:120:21: error: 'h' undeclared (first use in this function)
     a = a+b+c+d+e+g+h+a;
                     ^
make: *** [src/matrix_mult.o] Error 1

12:30:57 Build Finished (took 192ms)

